@@ -39,6 +39,11 @@ public class WeatherController {
     private List<Weather> weatherList = new ArrayList<>();
 
     /**
+     * Ruta al directorio de datos meteorológicos.
+     */
+    private final String dir = Paths.get("").toAbsolutePath() + File.separator + "data";
+
+    /**
      * Obtiene la instancia única de la clase `WeatherController`.
      *
      * @return La instancia única de `WeatherController`.
@@ -54,18 +59,18 @@ public class WeatherController {
      * Carga datos meteorológicos desde archivos y los almacena en la lista `weatherList`.
      */
     public void loadWeather() {
-        try (Stream<Path> listPaths = Files.list(Paths.get("src" + File.separator + "data"))) {
+        try (Stream<Path> listPaths = Files.list(Paths.get(dir))) {
             listPaths.filter(a -> a.getFileName().toString().startsWith("Aemet"))
                     .forEach(a -> {
-                        File newEncode = changeEncoding(a.toString(), "src" + File.separator + "data" + File.separator + "new" + a.getFileName());
+                        File newEncode = changeEncoding(a.toString(), dir + File.separator + "new" + a.getFileName());
 
                         try (BufferedReader br = new BufferedReader(new FileReader(newEncode))) {
                             String line = br.readLine();
 
                             while (line != null) {
-                                int day = Integer.parseInt(newEncode.toString().substring(23, 25));
-                                int month = Integer.parseInt(newEncode.toString().substring(21, 23));
-                                int year = Integer.parseInt(newEncode.toString().substring(17, 21));
+                                int day = Integer.parseInt(newEncode.getName().substring(14, 16));
+                                int month = Integer.parseInt(newEncode.getName().substring(12, 14));
+                                int year = Integer.parseInt(newEncode.getName().substring(8, 12));
                                 String[] tiempo = line.split(";");
                                 LocalDate dia = LocalDate.of(year, month, day);
 
@@ -94,7 +99,6 @@ public class WeatherController {
     public File changeEncoding(String oldArchivo, String newArchivo) {
         try {
             Files.deleteIfExists(Paths.get(newArchivo));
-            /*Lee el contenido del archivo de origen para copiarlo en el nuevo con distinto codificador*/
             String contenido = Files.readString(Paths.get(oldArchivo), Charset.forName("Windows-1252"));
             Files.writeString(Paths.get(newArchivo), contenido, StandardCharsets.UTF_8);
             return new File(newArchivo);
@@ -143,10 +147,11 @@ public class WeatherController {
      * @param provincia  Nombre de la provincia para la exportación.
      */
     public void exportJson(String provincia) {
-        String rutaDelArchivo = "src" + File.separator + "data" + File.separator + "Aemet.json";
-        /*si el fichero "rutaDelArchivo" eliminarlo y volverlo a crear*/
+        String rutaJson = dir + File.separator + "JsonAemet.json";
+        File file = new File(rutaJson);
+
         try {
-            Files.deleteIfExists(Paths.get(rutaDelArchivo));
+            Files.deleteIfExists(Path.of(file.getPath()));
         } catch (IOException e) {
             System.out.println("Error al crear el archivo JSON: " + e.getMessage());
         }
@@ -158,7 +163,7 @@ public class WeatherController {
         if (findByNombre(provincia) == null) {
             System.out.println("No se ha encontrado la provincia");
         } else {
-            try (FileWriter writer = new FileWriter(rutaDelArchivo)) {
+            try (FileWriter writer = new FileWriter(rutaJson)) {
                 gson.toJson(findByNombre(provincia), writer);
             } catch (IOException e) {
                 System.out.println("Error al escribir el archivo JSON: " + e.getMessage());
@@ -166,36 +171,3 @@ public class WeatherController {
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
